--- a/accommodation-frontend/src/app/home/home.component.html
+++ b/accommodation-frontend/src/app/home/home.component.html
@@ -1,16 +1,13 @@
-<!-- header.component.html -->
 <mat-toolbar color="primary">
   <span>My App</span>
   <span class="spacer"></span>
-  <button mat-flat-button color="accent">
-    <a href="http://localhost:9000/authorize?nesto">Login</a>
+  <button mat-flat-button color="accent" (click)="authorize()">Login</button>
+  <button mat-raised-button color="accent" routerLink="/sign-up">
+    Register
   </button>
-  <button mat-raised-button color="accent" routerLink="/sign-up">Signup</button>
 </mat-toolbar>
 
-<!-- some-other.component.html -->
 <div class="search-container">
-  <!-- search-field.component.html -->
   <mat-form-field class="search-field">
     <input
       matInput
