--- a/accommodation-frontend/src/app/home/home.component.html
+++ b/accommodation-frontend/src/app/home/home.component.html
@@ -1,9 +1,38 @@
 <mat-toolbar color="primary">
   <span>My App</span>
   <span class="spacer"></span>
-  <button mat-flat-button color="accent" (click)="authorize()">Login</button>
-  <button mat-raised-button color="accent" routerLink="/sign-up">
+  <button
+    *ngIf="loggedIn === false"
+    mat-flat-button
+    color="accent"
+    (click)="authorize()"
+  >
+    Login
+  </button>
+  <button
+    *ngIf="loggedIn === false"
+    mat-raised-button
+    color="accent"
+    routerLink="/sign-up"
+  >
     Register
+  </button>
+  <!-- TODO: set id to token -->
+  <button
+    *ngIf="loggedIn === true"
+    mat-raised-button
+    color="accent"
+    routerLink="/edit-profile/:id"
+  >
+    Edit profile
+  </button>
+  <button
+    *ngIf="loggedIn === true"
+    mat-raised-button
+    color="accent"
+    (click)="logOut()"
+  >
+    Logout
   </button>
 </mat-toolbar>
 
