--- a/accommodation-frontend/src/app/home/home.component.css
+++ b/accommodation-frontend/src/app/home/home.component.css
@@ -1,15 +1,72 @@
-.spacer {
-    flex: 1 1 auto;
-  }
-
 .search-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-  }
+  display: flex;
+  align-items: center;
+  margin-bottom: 16px;
+  gap:10px;
+}
 
 .search-field {
-    width: 500px;
+  margin-right: 16px;
+  flex-grow: 0.5;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap:50px;
+  margin-right: 40px;
+  margin-left: 40px;
+}
+
+.card {
+  width: 300px;
+  margin-bottom: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-image {
+  height: 200px;
+  overflow: hidden;
+}
+
+.card-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card-content {
+  padding: 16px;
+}
+
+.card-title {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.card-text {
+  font-size: 14px;
+  margin-bottom: 4px;
+}
+
+.header-toolbar {
+  display: inline-flex;
+  padding: 0 16px;
+  flex-direction: row-reverse;
+}
+
+.header-title {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.header-button {
+  margin-left: 16px;
+}
+
+.header-link {
+  color: white;
+  text-decoration: none;
 }
