feat: Adding overview on home page (#4)
* Added dummy home page

* feat:adding overview on home page

---------

Co-authored-by: Aleksandar Buljevic <abuljevic8@gmail.com>
Co-authored-by: jovana.arsovic@levi9.com <jovana.arsovic@levi9.com>

--- a/accommodation-frontend/src/app/home/home.component.html
+++ b/accommodation-frontend/src/app/home/home.component.html
@@ -53,6 +53,34 @@
   </button>
 </div>
 
+<!-- <div class="card-container">
+  <!-- <mat-card
+    class="card"
+    *ngFor="let card of cardData"
+    (click)="openAccommodation(card.id)"
+  > -->
+<!-- <div class="card-image">
+      <img [src]="getRandomImage(card)" alt="Accommodation Image" />
+    </div> -->
+-->
+
+<!-- <div class="search-container">
+      <mat-form-field class="search-field">
+        <input
+          matInput
+          type="text"
+          placeholder="Search"
+          [(ngModel)]="searchQuery"
+        />
+      </mat-form-field>
+      <button mat-raised-button color="primary" (click)="searchClicked()">
+        Search
+      </button>
+      <button mat-raised-button color="primary" (click)="clearSearch()">
+        Clear
+      </button>
+    </div> -->
+
 <div class="card-container">
   <mat-card
     class="card"
@@ -73,3 +101,5 @@
     </div>
   </mat-card>
 </div>
+<!-- </mat-card>
+</div> -->
