--- a/accommodation-frontend/src/app/home/home.component.html
+++ b/accommodation-frontend/src/app/home/home.component.html
@@ -37,49 +37,26 @@
 </mat-toolbar>
 
 <div class="search-container">
-  <mat-form-field class="search-field">
-    <input
-      matInput
-      type="text"
-      placeholder="Search"
-      [(ngModel)]="searchQuery"
-    />
-  </mat-form-field>
-  <button mat-raised-button color="primary" (click)="searchClicked()">
-    Search
-  </button>
+  <input
+    class="search-input"
+    type="text"
+    placeholder="Location"
+    [(ngModel)]="location"
+  />
+  <input class="search-input" type="date" [(ngModel)]="startDate" />
+  <input class="search-input" type="date" [(ngModel)]="endDate" />
+  <input
+    class="search-input"
+    type="number"
+    placeholder="Guests"
+    [(ngModel)]="numberOfGuests"
+  />
+
+  <button mat-raised-button color="primary" (click)="search()">Search</button>
   <button mat-raised-button color="primary" (click)="clearSearch()">
     Clear
   </button>
 </div>
-
-<!-- <div class="card-container">
-  <!-- <mat-card
-    class="card"
-    *ngFor="let card of cardData"
-    (click)="openAccommodation(card.id)"
-  > -->
-<!-- <div class="card-image">
-      <img [src]="getRandomImage(card)" alt="Accommodation Image" />
-    </div> -->
--->
-
-<!-- <div class="search-container">
-      <mat-form-field class="search-field">
-        <input
-          matInput
-          type="text"
-          placeholder="Search"
-          [(ngModel)]="searchQuery"
-        />
-      </mat-form-field>
-      <button mat-raised-button color="primary" (click)="searchClicked()">
-        Search
-      </button>
-      <button mat-raised-button color="primary" (click)="clearSearch()">
-        Clear
-      </button>
-    </div> -->
 
 <div class="card-container">
   <mat-card
@@ -101,5 +78,3 @@
     </div>
   </mat-card>
 </div>
-<!-- </mat-card>
-</div> -->
