Moved buttons and fixed error in console name not found.

--- a/accommodation-frontend/src/app/home/home.component.css
+++ b/accommodation-frontend/src/app/home/home.component.css
@@ -91,3 +91,13 @@ button {
   color: white;
   text-decoration: none;
 }
+
+mat-toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+mat-toolbar button {
+  margin-right: 10px;
+}
