--- a/accommodation-frontend/src/app/accommodation-display/accommodation-display.component.html
+++ b/accommodation-frontend/src/app/accommodation-display/accommodation-display.component.html
@@ -1,23 +1,23 @@
 <div class="accommodation-details">
-    <h2>{{ accommodation.name }}</h2>
-    <p class="location">{{ accommodation.location }}</p>
+    <h2>{{ accommodation?.name }}</h2>
+    <p class="location">{{ accommodation?.location }}</p>
     <div class="image-gallery">
         <div *ngFor="let image of accommodation?.photographs" class="image-gallery-item">
           <img [src]="image" alt="Accommodation Image" class="gallery-image">
         </div>
       </div>
     <div clas="guest-list">
-    <p >Minimum guests: {{ accommodation.minQuests }}</p>
-    <p >Maximum guests: {{ accommodation.maxQuests }}</p>
+    <p >Minimum guests: {{ accommodation?.minQuests }}</p>
+    <p >Maximum guests: {{ accommodation?.maxQuests }}</p>
     </div>
     <p>Benefits:</p>
     <ul class="benefits-list">
-      <li *ngIf="accommodation.benefits.wifi"><i class="fas fa-wifi"></i> Wi-Fi</li>
-      <li *ngIf="accommodation.benefits.kitchen"><i class="fas fa-utensils"></i> Kitchen</li>
-      <li *ngIf="accommodation.benefits.ac"><i class="fas fa-snowflake"></i> Air Conditioning</li>
-      <li *ngIf="accommodation.benefits.freeParkingSpace"><i class="fas fa-parking"></i> Free Parking</li>
+      <li *ngIf="accommodation?.benefits.wifi"><i class="fas fa-wifi"></i> Wi-Fi</li>
+      <li *ngIf="accommodation?.benefits.kitchen"><i class="fas fa-utensils"></i> Kitchen</li>
+      <li *ngIf="accommodation?.benefits.ac"><i class="fas fa-snowflake"></i> Air Conditioning</li>
+      <li *ngIf="accommodation?.benefits.freeParkingSpace"><i class="fas fa-parking"></i> Free Parking</li>
     </ul>
-    <p class="price">Price: {{ accommodation.defaultPrice | currency: 'USD' }}</p>
+    <p class="price">Price: {{ accommodation?.defaultPrice | currency: 'USD' }}</p>
     <button class="book-button">Book Now</button>
   </div>
   
