--- a/accommodation-frontend/src/app/home/home.component.html
+++ b/accommodation-frontend/src/app/home/home.component.html
@@ -1,39 +1,40 @@
-<mat-toolbar color="primary">
-  <span>My App</span>
-  <span class="spacer"></span>
-  <button
-    *ngIf="loggedIn === false"
-    mat-flat-button
-    color="accent"
-    (click)="authorize()"
-  >
-    Login
-  </button>
-  <button
-    *ngIf="loggedIn === false"
-    mat-raised-button
-    color="accent"
-    routerLink="/sign-up"
-  >
-    Register
-  </button>
-  <!-- TODO: set id to token -->
-  <button
-    *ngIf="loggedIn === true"
-    mat-raised-button
-    color="accent"
-    routerLink="/edit-profile/:id"
-  >
-    Edit profile
-  </button>
-  <button
-    *ngIf="loggedIn === true"
-    mat-raised-button
-    color="accent"
-    (click)="logOut()"
-  >
-    Logout
-  </button>
+<mat-toolbar color="primary" >
+  <span>Book accommodation</span>
+  <div>
+    <button
+      *ngIf="!loggedIn"
+      mat-flat-button
+      color="accent"
+      (click)="authorize()"
+    >
+      Login
+    </button>
+    <button
+      *ngIf="!loggedIn"
+      mat-raised-button
+      color="accent"
+      routerLink="/sign-up"
+    >
+      Register
+    </button>
+    <!-- TODO: set id to token -->
+    <button
+      *ngIf="loggedIn"
+      mat-raised-button
+      color="accent"
+      routerLink="/edit-profile/:id"
+    >
+      Edit profile
+    </button>
+    <button
+      *ngIf="loggedIn"
+      mat-raised-button
+      color="accent"
+      (click)="logOut()"
+    >
+      Logout
+    </button>
+  </div>
 </mat-toolbar>
 
 <div class="search-container">
