--- a/accommodation-frontend/src/app/edit-profile/edit-profile.component.html
+++ b/accommodation-frontend/src/app/edit-profile/edit-profile.component.html
@@ -3,15 +3,15 @@
 <div class="main-div">
   <div class="form-container">
     <mat-card>
-      <mat-card-title>Sign up</mat-card-title>
+      <mat-card-title>Edit profile</mat-card-title>
       <mat-card-content>
-        <form [formGroup]="signUpForm" novalidate>
+        <form [formGroup]="userForm" novalidate>
           <div class="group-fileds">
             <mat-form-field appearance="outline" class="example-full-width">
               <mat-label>First name</mat-label>
               <input matInput formControlName="firstName" required />
               <mat-error
-                *ngIf="signUpForm.get('firstName')?.hasError('required')"
+                *ngIf="userForm.get('firstName')?.hasError('required')"
               >
                 First Name is required
               </mat-error>
@@ -19,9 +19,7 @@
             <mat-form-field appearance="outline" class="example-full-width">
               <mat-label>Last name</mat-label>
               <input matInput formControlName="lastName" required />
-              <mat-error
-                *ngIf="signUpForm.get('lastName')?.hasError('required')"
-              >
+              <mat-error *ngIf="userForm.get('lastName')?.hasError('required')">
                 Last Name is required
               </mat-error>
             </mat-form-field>
@@ -30,54 +28,22 @@
             <mat-form-field appearance="outline" class="example-full-width">
               <mat-label>Username</mat-label>
               <input matInput formControlName="userName" required />
-              <mat-error
-                *ngIf="signUpForm.get('userName')?.hasError('required')"
-              >
+              <mat-error *ngIf="userForm.get('userName')?.hasError('required')">
                 Username is required
               </mat-error>
             </mat-form-field>
             <mat-form-field appearance="outline" class="example-full-width">
               <mat-label>Email</mat-label>
               <input matInput formControlName="email" required />
-              <mat-error *ngIf="signUpForm.get('email')?.hasError('required')">
+              <mat-error *ngIf="userForm.get('email')?.hasError('required')">
                 Email is required
-              </mat-error>
-            </mat-form-field>
-          </div>
-          <div class="group-fileds">
-            <mat-form-field appearance="outline" class="example-full-width">
-              <mat-label>Password</mat-label>
-              <input
-                matInput
-                formControlName="password"
-                type="password"
-                required
-              />
-              <mat-error
-                *ngIf="signUpForm.get('password')?.hasError('required')"
-              >
-                Password is required
-              </mat-error>
-            </mat-form-field>
-            <mat-form-field appearance="outline" class="example-full-width">
-              <mat-label>Repeat password</mat-label>
-              <input
-                matInput
-                formControlName="repeatPassword"
-                type="password"
-                required
-              />
-              <mat-error
-                *ngIf="signUpForm.get('repeatPassword')?.hasError('required')"
-              >
-                Repeat password is required
               </mat-error>
             </mat-form-field>
           </div>
           <mat-form-field appearance="outline" class="example-full-width">
             <mat-label>Address</mat-label>
             <input matInput formControlName="address" required />
-            <mat-error *ngIf="signUpForm.get('address')?.hasError('required')">
+            <mat-error *ngIf="userForm.get('address')?.hasError('required')">
               Address is required
             </mat-error>
           </mat-form-field>
@@ -87,21 +53,21 @@
           </mat-form-field>
           <div class="role">
             <mat-label>Role: </mat-label>
-            <mat-radio-group
-              formControlName="role"
-              [(ngModel)]="selectedOption"
-            >
-              <mat-radio-button value="HOST">Host</mat-radio-button>
-              <mat-radio-button value="GUEST">Guest</mat-radio-button>
-            </mat-radio-group>
+            <span>{{ userForm.get("role")?.value }}</span>
           </div>
+          <mat-form-field appearance="outline" class="example-full-width">
+            <mat-label>Change password</mat-label>
+            <input matInput formControlName="password" />
+          </mat-form-field>
         </form>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-raised-button color="primary" (click)="signUpData()">
-          Register
+        <button mat-raised-button color="primary" (click)="editData()">
+          Edit
         </button>
-        <button mat-raised-button color="primary" routerLink="">Cancel</button>
+        <button mat-raised-button color="primary" (click)="deleteUser()">
+          Delete
+        </button>
       </mat-card-actions>
     </mat-card>
   </div>
