--- a/accommodation-frontend/src/app/home/home.component.html
+++ b/accommodation-frontend/src/app/home/home.component.html
@@ -1,50 +1,6 @@
-<mat-toolbar color="primary" >
-  <span>Book accommodation</span>
-  <div>
-    <button
-      *ngIf="!loggedIn"
-      mat-flat-button
-      color="accent"
-      (click)="authorize()"
-    >
-      Login
-    </button>
-    <button
-      *ngIf="!loggedIn"
-      mat-raised-button
-      color="accent"
-      routerLink="/sign-up"
-    >
-      Register
-    </button>
-    <!-- TODO: set id to token -->
-    <button
-      *ngIf="loggedIn && !isGuest"
-      mat-raised-button
-      color="accent"
-      routerLink="/create-accommodation"
-    >
-      + Create
-    </button>
-    <button
-      *ngIf="loggedIn"
-      mat-raised-button
-      color="accent"
-      routerLink="/edit-profile/:id"
-    >
-      Edit profile
-    </button>
-    <button
-      *ngIf="loggedIn"
-      mat-raised-button
-      color="accent"
-      (click)="logOut()"
-    >
-      Logout
-    </button>
-  </div>
-</mat-toolbar>
+<app-header></app-header>
 
+<div class="search-title"><h1>Search</h1></div>
 <div class="search-container">
   <input
     class="search-input"
@@ -61,8 +17,20 @@
     [(ngModel)]="numberOfGuests"
   />
 
-  <button mat-raised-button color="primary" (click)="search()">Search</button>
-  <button mat-raised-button color="primary" (click)="clearSearch()">
+  <button
+    mat-raised-button
+    color="primary"
+    [disabled]="this.isSearchDisabled()"
+    (click)="search()"
+  >
+    Search
+  </button>
+  <button
+    [disabled]="this.isClearDisabled()"
+    mat-raised-button
+    color="primary"
+    (click)="clearSearch()"
+  >
     Clear
   </button>
 </div>
@@ -74,7 +42,7 @@
     (click)="openAccommodation(card.id)"
   >
     <div class="card-image">
-      <img [src]="getRandomImage(card)" alt="Accommodation Image" />
+      <img [src]="this.selectedImages[card.id]" alt="Accommodation Image" />
     </div>
 
     <div class="card-content">
