adding booking option in accommodation page (#10)
Co-authored-by: jovana.arsovic@levi9.com <jovana.arsovic@levi9.com>
Co-authored-by: Aleksandar Buljevic <abuljevic8@gmail.com>

--- a/accommodation-frontend/src/app/accommodation-display/accommodation-display.component.html
+++ b/accommodation-frontend/src/app/accommodation-display/accommodation-display.component.html
@@ -33,5 +33,16 @@
   <p class="price">
     Price: {{ accommodation?.defaultPrice | currency : "USD" }}
   </p>
-  <button class="book-button" *ngIf="this.authService.isGuest">Book Now</button>
+  <button
+    class="book-button"
+    *ngIf="authService.isGuest"
+    (click)="showBookAccomodation = true"
+  >
+    Book Now
+  </button>
+
+  <app-book-accommodation
+    [id]="this.id"
+    *ngIf="showBookAccomodation"
+  ></app-book-accommodation>
 </div>
