adding booked accommodation overview

--- a/accommodation-frontend/src/app/home/home.component.html
+++ b/accommodation-frontend/src/app/home/home.component.html
@@ -27,6 +27,14 @@
       + Create
     </button>
     <button
+    *ngIf="isGuest"
+    mat-raised-button
+    color="accent"
+    (click)="bookedAccommodationOverview()"
+  >
+    Booked
+  </button>
+    <button
       *ngIf="loggedIn"
       mat-raised-button
       color="accent"
