--- a/accommodation-frontend/src/app/accommodation-display/accommodation-display.component.css
+++ b/accommodation-frontend/src/app/accommodation-display/accommodation-display.component.css
@@ -1,15 +1,35 @@
+h2 {
+  border-bottom: 2px solid #727171;
+  padding-top: 15px;
+  padding-bottom: 10px;
+  margin: 0px;
+}
+
 .accommodation-details {
   text-align: center;
   margin: 20px;
-  padding: 20px;
   background-color: #f9f9f9;
   border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.3);
+  height: 95%;
+  overflow-y: auto;
 }
 
-.location {
-  font-size: 14px;
-  color: #777;
+h3 {
+  text-align: start;
+  margin-left: 35px;
+}
+
+.details {
+  font-size: large;
+  color: #353535;
+  text-align: start;
+  margin-left: 35px;
+}
+
+.details span {
+  font-size: larger;
+  color: #0e0e0e;
 }
 
 .image-gallery {
@@ -17,40 +37,24 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 10px;
+  background-color: #ebebeb;
+  width: 100%;
+  padding-top: 10px;
 }
 
 .image-gallery-item {
-  flex: 0 0 calc(33.33% - 10px);
-  max-width: calc(33.33% - 10px);
-}
-
-.gallery-image {
-  width: 100%;
-  height: auto;
+  width: 24vw;
+  height: 45vh;
 }
 
 
-.benefits-list, .guest-list {
-  list-style-type: none;
-  padding: 0;
-  margin-bottom: 20px;
-}
-
-.benefits-list li {
-  font-size: 14px;
-  color: #555;
-  margin-bottom: 5px;
-}
-
-.benefits-list li i {
-  margin-right: 5px;
-}
-
-.price {
-  font-size: 18px;
-  font-weight: bold;
-  color: #333;
-  margin-bottom: 20px;
+.benefits-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding-left: 15px;
+  margin-left: 15px;
 }
 
 .book-button {
@@ -61,8 +65,13 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  margin-bottom: 15px;
 }
 
 .book-button:hover {
   background-color: #0056b3;
+}
+
+.bottom-border {
+  border-bottom: 1px solid #727171;
 }
