--- a/accommodation-frontend/src/app/create-accommodation/create-accommodation.component.html
+++ b/accommodation-frontend/src/app/create-accommodation/create-accommodation.component.html
@@ -1,55 +1,85 @@
 <div class="main-div">
-    <div class="form-container">
-    <mat-card>
-      <mat-card-title>Create accommodation</mat-card-title>
-      <mat-card-content>
-        <form [formGroup]="accommodationForm" novalidate>
-          <div class="group-fileds">
-          <mat-form-field appearance="outline" class="example-full-width">
+    <form [formGroup]="accommodationForm" class="form-container">
+        <h2>Create accommodation</h2>
+        <mat-form-field appearance="outline" class="example-full-width">
             <mat-label>Name</mat-label>
             <input matInput formControlName="name" required>
             <mat-error *ngIf="accommodationForm.get('name')?.hasError('required')">
-              Name is required
+            Name is required
             </mat-error>
-          </mat-form-field>
-          <mat-form-field appearance="outline" class="example-full-width">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="example-full-width">
             <mat-label>Location</mat-label>
             <input matInput formControlName="location" required>
             <mat-error *ngIf="accommodationForm.get('location')?.hasError('required')">
-              Location is required
+            Location is required
             </mat-error>
-          </mat-form-field>
-          </div>
-          <div class="group-fileds">
-          <mat-form-field appearance="outline" class="example-full-width">
+        </mat-form-field>
+        <div class="group-fileds">
+        <mat-form-field appearance="outline" class="example-full-width">
             <mat-label>Minimum guests</mat-label>
-            <input matInput formControlName="minQuests" required>
+            <input matInput formControlName="minQuests" type="number">
             <mat-error *ngIf="accommodationForm.get('minQuests')?.hasError('min')">
-              Minimum number is 1
+            Minimum number is 1
             </mat-error>
-          </mat-form-field>
-          <mat-form-field appearance="outline" class="example-full-width">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="example-full-width">
             <mat-label>Maximum guests</mat-label>
-            <input matInput formControlName="maxQuests" required>
+            <input matInput formControlName="maxQuests" type="number">
             <mat-error *ngIf="accommodationForm.get('maxQuests')?.hasError('min')">
-              Maximum number is 1
+            Maximum number is 1
             </mat-error>
-          </mat-form-field>
-          </div>
-          <mat-form-field appearance="outline" class="example-full-width">
+        </mat-form-field>
+        </div>
+        <mat-form-field appearance="outline" class="example-full-width" style="border-bottom: 1px solid #727171; margin-bottom: 20px;">
             <mat-label>Default price</mat-label>
-            <input matInput formControlName="defaultPrice" required>
+            <input matInput formControlName="defaultPrice" type="number">
             <mat-error *ngIf="accommodationForm.get('defaultPrice')?.hasError('min')">
                 Default price cant be less than 1
             </mat-error>
-          </mat-form-field>
-        </form>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-raised-button color="primary" (click)="createAccommodation()">Create</button>
-        <!-- <button mat-raised-button color="primary" (click)="clearForm()">Clear</button> -->
-      </mat-card-actions>
-    </mat-card>
-    </div>
+        </mat-form-field>
+        <div class="radio-buttons">
+            <mat-label>Automatic approve: </mat-label>
+            <mat-radio-group formControlName="automaticApprove" [(ngModel)]="selectedApprove">
+                <mat-radio-button value="true">Yes</mat-radio-button>
+                <mat-radio-button value="false">False</mat-radio-button>
+            </mat-radio-group>
+        </div>
+        <div class="radio-buttons" style="border-bottom: 1px solid #727171; margin-bottom: 20px;">
+            <mat-label>Price type: </mat-label>
+            <mat-radio-group formControlName="priceType" [(ngModel)]="selectedPriceType">
+            <mat-radio-button value="FIXED_PER_NIGHT">Fixed per night</mat-radio-button>
+            <mat-radio-button value="PER_PERSON_PER_NIGHT">Per person per night</mat-radio-button>
+            </mat-radio-group>
+        </div>
+        <div appearance="outline" class="example-full-width choose-image">
+            <mat-label>Photographs:</mat-label>
+            <!-- <input type="file" (change)="handleFileInput($event)" accept="image/*" multiple> -->
+            <label class="custom-file-input">
+                <input type="file" (change)="handleFileInput($event)" accept="image/*" multiple>
+                Choose images
+            </label>
+        </div>
+        <div class="images-preview">
+            <div *ngFor="let image of accommodationForm.controls['photographs'].value; let i = index" class="image-container">
+                <img [src]="image" alt="Image Preview" width="100" height="100">
+                <!-- <button (click)="removeImagePreview(i)">X</button> -->
+                <button mat-icon-button (click)="removeImagePreview(i)" class="close-button">
+                    <mat-icon>close</mat-icon>
+                </button>
+            </div>
+        </div>
+        <div class="benefits"> 
+            <h4>Choose benefits:</h4>
+            <mat-checkbox formControlName="wifi">WiFi <mat-icon class="benefit-icon">wifi</mat-icon></mat-checkbox>
+            <mat-checkbox formControlName="ac">AC <mat-icon class="benefit-icon">ac_unit</mat-icon></mat-checkbox>
+            <mat-checkbox formControlName="kitchen">Kitchen <mat-icon class="benefit-icon">kitchen</mat-icon></mat-checkbox>
+            <mat-checkbox formControlName="freeParkingSpace">Free parking space <mat-icon class="benefit-icon"> local_parking</mat-icon></mat-checkbox>
+        </div>
+        <div>
+            <button mat-raised-button color="primary" (click)="createAccommodation()" class="action-button">Create</button>
+            <button mat-raised-button color="primary" (click)="clearForm()" class="action-button">Clear</button>
+        </div>
+    </form>
   </div>
   
