--- a/accommodation-frontend/src/app/accommodation-display/accommodation-display.component.html
+++ b/accommodation-frontend/src/app/accommodation-display/accommodation-display.component.html
@@ -1,46 +1,33 @@
 <app-header></app-header>
-
 <div class="accommodation-details">
-  <h2>{{ accommodation?.name }}</h2>
-  <p class="location">{{ accommodation?.location }}</p>
-  <div class="image-gallery">
-    <div
-      *ngFor="let image of accommodation?.photographs"
-      class="image-gallery-item"
-    >
-      <img [src]="image" alt="Accommodation Image" class="gallery-image" />
+    <h2>{{ accommodation?.name }}</h2>
+    <div class="image-gallery">
+      <img *ngFor="let image of accommodation?.photographs" 
+            [src]="image" 
+            alt="Accommodation Image" 
+            class="image-gallery-item">
     </div>
-  </div>
-  <div clas="guest-list">
-    <p>Minimum guests: {{ accommodation?.minQuests }}</p>
-    <p>Maximum guests: {{ accommodation?.maxQuests }}</p>
-  </div>
-  <p>Benefits:</p>
-  <ul class="benefits-list">
-    <li *ngIf="accommodation?.benefits.wifi">
-      <i class="fas fa-wifi"></i> Wi-Fi
-    </li>
-    <li *ngIf="accommodation?.benefits.kitchen">
-      <i class="fas fa-utensils"></i> Kitchen
-    </li>
-    <li *ngIf="accommodation?.benefits.ac">
-      <i class="fas fa-snowflake"></i> Air Conditioning
-    </li>
-    <li *ngIf="accommodation?.benefits.freeParkingSpace">
-      <i class="fas fa-parking"></i> Free Parking
-    </li>
-  </ul>
-  <p class="price">
-    Price: {{ accommodation?.defaultPrice | currency : "USD" }}
-  </p>
-  <button
-    class="book-button"
-    *ngIf="authService.isGuest"
-    (click)="showBookAccomodation = true"
-  >
+    <div clas="guest-list">
+      <h3 class="bottom-border">Accommodation details:</h3>
+      <p class="details">Location: <span>{{ accommodation?.location }}</span></p>
+      <p class="details">Minimum guests: <span>{{ accommodation?.minQuests }}</span></p>
+      <p class="details">Maximum guests: <span>{{ accommodation?.maxQuests }}</span></p>
+    </div>
+    <p class="details">Benefits:</p>
+    <ul class="benefits-list">
+      <li *ngIf="accommodation?.benefits?.wifi" class="details"><span>Wi-Fi</span></li>
+      <li *ngIf="accommodation?.benefits?.kitchen" class="details"><span>Kitchen</span></li>
+      <li *ngIf="accommodation?.benefits?.ac" class="details"><span>Air Conditioning</span></li>
+      <li *ngIf="accommodation?.benefits?.freeParkingSpace" class="details"><span>Free Parking</span></li>
+    </ul>
+    <p class="details bottom-border">Price: <span>{{ accommodation?.defaultPrice | currency: 'USD' }}</span></p>
+    <button
+      class="book-button"
+      *ngIf="authService.isGuest"
+      (click)="showBookAccomodation = true"
+    >
     Book Now
-  </button>
-
+    </button>
   <app-book-accommodation
     [id]="this.id"
     *ngIf="showBookAccomodation"
