--- a/accommodation-frontend/src/app/create-accommodation/create-accommodation.component.css
+++ b/accommodation-frontend/src/app/create-accommodation/create-accommodation.component.css
@@ -2,23 +2,35 @@
     width: 100%;
 }
 
+h2 {
+    font-size: x-large;
+    font-weight: 500;
+    border-bottom: 1px solid #727171;
+}
+
 .form-container {
     text-align: center;
     justify-content: center !important;
     background-color: #ffffff; 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    width: 35vw;
+    height: 75%;
+    overflow-y: auto;
+    padding: 20px;
+    border-radius: 5px;
   }
 
 .main-div {
-    height: auto;
-    text-align: center;
+    background: linear-gradient(180deg, #c8d0fa, #3f51b5);
     display: flex;
     justify-content: center !important;
-    align-items: center;
-    margin-top:50px;
+    align-items: flex-start;
+    width: 100vw;
+    height: 100%;
+    padding-top: 30px;
 }
 
-.group-fileds{
+.group-fileds {
     display: flex;
     gap: 10px;
 }
@@ -30,4 +42,75 @@ button {
 .role{
     float: left;
     margin-bottom: 25px;
+}
+
+.radio-buttons, .choose-image {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.choose-image {
+    margin-bottom: 10px;
+}
+
+.choose-image label.custom-file-input {
+    background-color: #7c8ad4;
+    color: white;
+    padding: 8px 12px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.choose-image label.custom-file-input input[type="file"] {
+    display: none;
+}
+
+.images-preview {
+    background-color: #ebebeb;
+    display: flex;
+    align-items: center;
+    overflow-x: auto;
+}
+
+.image-container {
+    position: relative;
+}
+
+img {
+    margin: 5px 10px;
+
+}
+
+img:hover {
+    cursor: pointer;
+    filter: grayscale(100%);
+    transition: filter 0.3s ease;
+}
+
+.benefits {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.close-button {
+    position: absolute;
+    top: -10px;
+    right: -20px;
+    z-index: 1000;
+}
+
+.close-button mat-icon{
+    color: rgb(172, 16, 16);
+}
+
+.benefit-icon {
+    position: absolute;
+    right: -50px;
+    top: 5px;
+}
+
+.action-button {
+    width: 48%;
 }
