--- a/accommodation-frontend/src/app/home/home.component.css
+++ b/accommodation-frontend/src/app/home/home.component.css
@@ -38,14 +38,16 @@ button {
 .card-container {
   display: flex;
   flex-wrap: wrap;
-  gap:50px;
-  margin-right: 40px;
-  margin-left: 40px;
+  gap: 40px;
+  overflow-y: auto;
+  height: 75vh;
+  width: 100%;
+  padding: 25px 0px;
+  padding-left: 25px;
 }
 
 .card {
   width: 300px;
-  margin-bottom: 16px;
   display: flex;
   flex-direction: column;
 }
