booked overview for guest

--- a/accommodation-frontend/src/app/accommodation-display/accommodation-display.component.html
+++ b/accommodation-frontend/src/app/accommodation-display/accommodation-display.component.html
@@ -41,6 +41,7 @@
 
   <app-book-accommodation
     [id]="this.id"
+    [userId]="this.accommodation?.hostId"
     *ngIf="showBookAccomodation"
   ></app-book-accommodation>
 </div>
