--- a/accommodation-frontend/src/app/booked-accommodation-overview/booked-accommodation-overview.component.html
+++ b/accommodation-frontend/src/app/booked-accommodation-overview/booked-accommodation-overview.component.html
@@ -10,11 +10,11 @@
     </thead>
     <tbody>
       <tr *ngFor="let accommodation of bookedAccommodations">
-        <td>{{ accommodation.accommondationName }}</td>
+        <td>{{ accommodation.name }}</td>
         <td>{{ accommodation.startDate }}</td>
         <td>{{ accommodation.endDate }}</td>
         <td>{{ accommodation.numberOfGuests }}</td>
-        <td><button (click)="cancelReservation()">Cancel accommodation</button></td>
+        <td><button (click)="cancelReservation(accommodation.id)">Cancel accommodation</button></td>
       </tr>
     </tbody>
   </table>
