--- a/accommodation-frontend/src/app/accommodations/accommodations.component.html
+++ b/accommodation-frontend/src/app/accommodations/accommodations.component.html
@@ -59,20 +59,23 @@
     <td mat-cell *matCellDef="let element">
       <button mat-button [matMenuTriggerFor]="menu">Menu</button>
       <mat-menu #menu="matMenu">
-        <button mat-menu-item (click)="this.display(element.id, 'Benefits')">
-          Display benefits
-        </button>
-        <button mat-menu-item (click)="this.display(element.id, 'CustomPrice')">
-          Edit custom price
+        <button [routerLink]="['/accommodation', element.id]" mat-menu-item>
+          Details
         </button>
         <button
+          [routerLink]="['/accommodation', element.id, 'custom-price']"
           mat-menu-item
-          (click)="this.display(element.id, 'Availability')"
         >
-          Edit availability
+          Custom price
+        </button>
+        <button
+          [routerLink]="['/accommodation', element.id, 'availability']"
+          mat-menu-item
+        >
+          Availability
         </button>
         <button mat-menu-item (click)="this.display(element.id, 'Edit price')">
-          Edit default price
+          Default price
         </button>
       </mat-menu>
     </td>
@@ -82,8 +85,19 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
 
+<button
+  class="createButton"
+  mat-raised-button
+  color="accent"
+  routerLink="/create-accommodation"
+>
+  + Create
+</button>
+
 <app-edit-price
   *ngIf="this.displayed === 'Edit price'"
   [id]="this.selectedId"
+  [type]="this.displayed"
+  (hideEvent)="handleHideEvent()"
   (successEvent)="handleEvent()"
 ></app-edit-price>
