--- a/accommodation-frontend/src/app/edit-price/edit-price.component.html
+++ b/accommodation-frontend/src/app/edit-price/edit-price.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <button mat-raised-button (click)="hide()">Hide</button>
   <h2>Edit price</h2>
   <p>Selected id is {{ id }}</p>
   <div class="form-group">
