Approve works now

--- a/accommodation-frontend/src/app/header/header.component.html
+++ b/accommodation-frontend/src/app/header/header.component.html
@@ -5,6 +5,14 @@
       *ngIf="this.authService.loggedIn && !this.authService.isGuest"
       mat-raised-button
       color="accent"
+      routerLink="/approve"
+    >
+      Approve
+    </button>
+    <button
+      *ngIf="this.authService.loggedIn && !this.authService.isGuest"
+      mat-raised-button
+      color="accent"
       routerLink="/accommodation"
     >
       Accommodations
