--- a/accommodation-frontend/src/app/header/header.component.html
+++ b/accommodation-frontend/src/app/header/header.component.html
@@ -2,6 +2,22 @@
   <span class="header-title" routerLink="/">Book accommodation</span>
   <div>
     <button
+      *ngIf="this.authService.loggedIn && !this.authService.isGuest"
+      mat-raised-button
+      color="accent"
+      routerLink="/approve"
+    >
+      Approve
+    </button>
+    <button
+      *ngIf="this.authService.loggedIn && !this.authService.isGuest"
+      mat-raised-button
+      color="accent"
+      routerLink="/accommodation"
+    >
+      Accommodations
+    </button>
+    <button
       *ngIf="!this.authService.loggedIn"
       mat-flat-button
       color="accent"
@@ -16,14 +32,6 @@
       routerLink="/sign-up"
     >
       Register
-    </button>
-    <button
-      *ngIf="this.authService.loggedIn && !this.authService.isGuest"
-      mat-raised-button
-      color="accent"
-      routerLink="/create-accommodation"
-    >
-      + Create
     </button>
     <button
       *ngIf="this.authService.loggedIn"
