Booked accommodation page overview (#16)
* adding overview page for booked accommodation

* booked overview for guest

---------

Co-authored-by: jovana.arsovic@levi9.com <jovana.arsovic@levi9.com>
Co-authored-by: Aleksandar Buljevic <abuljevic8@gmail.com>

--- a/accommodation-frontend/src/app/accommodation-display/accommodation-display.component.html
+++ b/accommodation-frontend/src/app/accommodation-display/accommodation-display.component.html
@@ -1,4 +1,3 @@
-<app-header></app-header>
 <div class="accommodation-details">
     <h2>{{ accommodation?.name }}</h2>
     <div class="image-gallery">
@@ -30,6 +29,7 @@
     </button>
   <app-book-accommodation
     [id]="this.id"
+    [userId]="this.accommodation?.hostId"
     *ngIf="showBookAccomodation"
   ></app-book-accommodation>
 </div>
