--- a/accommodation-frontend/src/app/edit-availability/edit-availability.component.html
+++ b/accommodation-frontend/src/app/edit-availability/edit-availability.component.html
@@ -4,7 +4,7 @@
   <p>Selected id is {{ id }}</p>
   <div class="form-group">
     <label for="newDate">New Date:</label>
-    <input type="date" id="price" [(ngModel)]="newDate" />
+    <input type="date" id="newDate" [(ngModel)]="newDate" />
   </div>
   <div>
     <section class="example-section">
